Change router page fade-in to fade-out instead. Fix IE flex layout bug.

--- a/PortfolioWebsite/ClientApp/src/app/app.component.less
+++ b/PortfolioWebsite/ClientApp/src/app/app.component.less
@@ -44,7 +44,7 @@
 }
 
 #content {
-  flex-grow: 1;
+  flex: 1 0 auto;
   padding-top: 80px;
 }
 
@@ -57,4 +57,8 @@
 #overlay {
   position: fixed;
   z-index: 10;
+}
+
+#outlet {
+  position: relative;
 }
