--- a/PortfolioWebsite/ClientApp/src/styles.less
+++ b/PortfolioWebsite/ClientApp/src/styles.less
@@ -1,5 +1,9 @@
 @import "assets/styles/variables.less";
 
+html {
+  overflow-y: scroll;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -12,7 +16,6 @@ body {
   letter-spacing: .05em;
   font-style: normal;
   color: #CCC;
-  overflow-y: scroll;
 }
 
 a {
@@ -22,7 +25,7 @@ a {
 }
 
 a:hover {
-  animation: fadeWhite .7s;
+  animation: fadeWhite .4s;
   animation-fill-mode: forwards;
 }
 
